apps/fe-web-nextjs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-web-nextjs
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fe-web-nextjs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fe-web-nextjs
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "platform-observability/java-instrumentation"
    spec:
      imagePullSecrets:
        - name: harbor-credentials
      containers:
        - name: fe-web-nextjs
          image: harbor.platform.local/app/fe-web-nextjs:cd200be6
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
          resources:
            requests:
              memory: "256Mi"
              # cpu: "500m"
            limits:
              memory: "512Mi"
              # cpu: "500m"
