apps/fe-web-nextjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-web-nextjs
  namespace: app
spec:
  selector:
    app: fe-web-nextjs
  ports:
    - port: 3000
      targetPort: 3000
